data/derived/fa15/progs/unify/prog0680.ml.out
Characters 50-71:
  let fixpoint (f,b) = wwhile ( let func x = f x in (f, not (f b = b), b));;
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type ('d -> 'd * bool) * 'd
